--- a/big_data_level_1_sports.ipynb
+++ b/big_data_level_1_sports.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOqUNUqWPAlNddER9iP5gk9",
+      "authorship_tag": "ABX9TyMUr9EOeSrIjyavPXpwBFU9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,34 +34,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HBPDZUZvOE1b",
-        "outputId": "899022c7-bed1-4dcd-a224-f219cb774315"
+        "outputId": "7d3b82ae-18c8-4204-84c7-720395602c51"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\r0% [Working]\r            \rGet:1 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran40/ InRelease [3,626 B]\n",
-            "\r0% [Connecting to archive.ubuntu.com (91.189.91.39)] [Waiting for headers] [1 I\r0% [Connecting to archive.ubuntu.com (91.189.91.39)] [Waiting for headers] [Wai\r0% [1 InRelease gpgv 3,626 B] [Waiting for headers] [Waiting for headers] [Wait\r                                                                               \rHit:2 http://archive.ubuntu.com/ubuntu bionic InRelease\n",
-            "\r0% [1 InRelease gpgv 3,626 B] [Waiting for headers] [Waiting for headers] [Wait\r                                                                               \rGet:3 http://archive.ubuntu.com/ubuntu bionic-updates InRelease [88.7 kB]\n",
-            "\r0% [1 InRelease gpgv 3,626 B] [3 InRelease 14.2 kB/88.7 kB 16%] [Waiting for he\r                                                                               \rGet:4 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic InRelease [15.9 kB]\n",
-            "\r0% [1 InRelease gpgv 3,626 B] [3 InRelease 14.2 kB/88.7 kB 16%] [Waiting for he\r                                                                               \rGet:5 http://security.ubuntu.com/ubuntu bionic-security InRelease [88.7 kB]\n",
-            "Ign:6 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  InRelease\n",
-            "Hit:7 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  InRelease\n",
-            "Hit:8 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  Release\n",
-            "Get:9 http://archive.ubuntu.com/ubuntu bionic-backports InRelease [83.3 kB]\n",
-            "Hit:10 http://ppa.launchpad.net/cran/libgit2/ubuntu bionic InRelease\n",
+            "\r0% [Working]\r            \rHit:1 http://archive.ubuntu.com/ubuntu bionic InRelease\n",
+            "\r0% [Waiting for headers] [Connecting to security.ubuntu.com (185.125.190.36)] [\r0% [1 InRelease gpgv 242 kB] [Waiting for headers] [Connecting to security.ubun\r                                                                               \rGet:2 http://archive.ubuntu.com/ubuntu bionic-updates InRelease [88.7 kB]\n",
+            "\r0% [1 InRelease gpgv 242 kB] [2 InRelease 14.2 kB/88.7 kB 16%] [Connecting to s\r                                                                               \rHit:3 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran40/ InRelease\n",
+            "\r0% [1 InRelease gpgv 242 kB] [2 InRelease 15.6 kB/88.7 kB 18%] [Waiting for hea\r0% [1 InRelease gpgv 242 kB] [Waiting for headers] [Waiting for headers] [Waiti\r                                                                               \rHit:4 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic InRelease\n",
+            "\r0% [1 InRelease gpgv 242 kB] [Waiting for headers] [Waiting for headers] [Waiti\r                                                                               \rGet:5 http://security.ubuntu.com/ubuntu bionic-security InRelease [88.7 kB]\n",
+            "Get:6 http://archive.ubuntu.com/ubuntu bionic-backports InRelease [83.3 kB]\n",
+            "Ign:7 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  InRelease\n",
+            "Hit:8 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  InRelease\n",
+            "Hit:9 http://ppa.launchpad.net/cran/libgit2/ubuntu bionic InRelease\n",
+            "Hit:10 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  Release\n",
             "Hit:11 http://ppa.launchpad.net/deadsnakes/ppa/ubuntu bionic InRelease\n",
             "Hit:12 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic InRelease\n",
-            "Get:14 http://archive.ubuntu.com/ubuntu bionic-updates/main amd64 Packages [3,440 kB]\n",
-            "Get:15 http://archive.ubuntu.com/ubuntu bionic-updates/restricted amd64 Packages [1,227 kB]\n",
-            "Get:16 http://archive.ubuntu.com/ubuntu bionic-updates/universe amd64 Packages [2,328 kB]\n",
-            "Get:17 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic/main Sources [2,164 kB]\n",
-            "Get:18 http://security.ubuntu.com/ubuntu bionic-security/restricted amd64 Packages [1,183 kB]\n",
-            "Get:19 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic/main amd64 Packages [1,109 kB]\n",
-            "Get:20 http://security.ubuntu.com/ubuntu bionic-security/main amd64 Packages [3,005 kB]\n",
-            "Get:21 http://security.ubuntu.com/ubuntu bionic-security/universe amd64 Packages [1,550 kB]\n",
-            "Fetched 16.3 MB in 4s (4,422 kB/s)\n",
+            "Fetched 261 kB in 3s (83.0 kB/s)\n",
             "Reading package lists... Done\n"
           ]
         }
@@ -98,7 +90,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PtwUdk_5ObMi",
-        "outputId": "a84994fd-5a89-4cc5-97d9-a2864ed7303b"
+        "outputId": "2ff8b5dc-8d8a-4bc4-c476-2f3e03205059"
       },
       "execution_count": 2,
       "outputs": [
@@ -106,16 +98,16 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2022-10-12 01:39:09--  https://jdbc.postgresql.org/download/postgresql-42.2.9.jar\n",
+            "--2022-10-12 02:39:07--  https://jdbc.postgresql.org/download/postgresql-42.2.9.jar\n",
             "Resolving jdbc.postgresql.org (jdbc.postgresql.org)... 72.32.157.228, 2001:4800:3e1:1::228\n",
             "Connecting to jdbc.postgresql.org (jdbc.postgresql.org)|72.32.157.228|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 914037 (893K) [application/java-archive]\n",
-            "Saving to: ‘postgresql-42.2.9.jar’\n",
+            "Saving to: ‘postgresql-42.2.9.jar.1’\n",
             "\n",
-            "postgresql-42.2.9.j 100%[===================>] 892.61K  5.65MB/s    in 0.2s    \n",
+            "postgresql-42.2.9.j 100%[===================>] 892.61K  4.81MB/s    in 0.2s    \n",
             "\n",
-            "2022-10-12 01:39:09 (5.65 MB/s) - ‘postgresql-42.2.9.jar’ saved [914037/914037]\n",
+            "2022-10-12 02:39:08 (4.81 MB/s) - ‘postgresql-42.2.9.jar.1’ saved [914037/914037]\n",
             "\n"
           ]
         }
@@ -124,14 +116,14 @@
     {
       "cell_type": "code",
       "source": [
-        "# Endpoint: mypostgresdb.ceiuqhog03bg.us-east-2.rds.amazonaws.com\n",
+        "# Endpoint: *\n",
         "# https://s3.amazonaws.com/amazon-reviews-pds/tsv/amazon_reviews_us_Sports_v1_00.tsv.gz\n",
         "# https://s3.amazonaws.com/amazon-reviews-pds/tsv/amazon_reviews_us_Home_Improvement_v1_00.tsv.gz"
       ],
       "metadata": {
         "id": "RshRzRWzvSKu"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -143,7 +135,7 @@
       "metadata": {
         "id": "A1-zJr1U3vuf"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -162,9 +154,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GNJSWLIN2JTP",
-        "outputId": "b3251699-3791-4e4f-88f3-18aee579db92"
+        "outputId": "f68dcea5-6f0b-47c7-dfec-921837a50fd4"
       },
-      "execution_count": 9,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -193,6 +185,10 @@
     {
       "cell_type": "code",
       "source": [
+        "print(df.count())\n",
+        "df = df.dropna()\n",
+        "print(df.count())\n",
+        "df = df.dropDuplicates()\n",
         "print(df.count())"
       ],
       "metadata": {
@@ -200,15 +196,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eZeZUfUk6Zsy",
-        "outputId": "8278f906-79e6-486c-f509-31081e12af4a"
+        "outputId": "92395f51-fadb-4031-a8e6-0805a8dd3524"
       },
-      "execution_count": 10,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "4850360\n"
+            "4850360\n",
+            "4849000\n",
+            "4849000\n"
           ]
         }
       ]
@@ -223,9 +221,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9OuD73WS6qH0",
-        "outputId": "e9c5c254-6558-4cb1-e3ab-19a70685ee64"
+        "outputId": "1165e5fe-0e56-4a9e-89f0-3eb91a9eb965"
       },
-      "execution_count": 11,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -267,7 +265,7 @@
       "metadata": {
         "id": "mKvvp3phA7ot"
       },
-      "execution_count": 23,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -280,9 +278,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pJEtNXE1Cvth",
-        "outputId": "a3c6408b-276e-4d10-8107-582d7dd6bee1"
+        "outputId": "8bcec201-4b9f-4097-919c-9ad69b30554b"
       },
-      "execution_count": 24,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -320,9 +318,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qQc8Kz7e68Fd",
-        "outputId": "d7196a66-a9d2-4942-8711-036aaf4fbce7"
+        "outputId": "83ab8488-ed20-4c96-ef78-c12122efd41d"
       },
-      "execution_count": 25,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -331,11 +329,11 @@
             "+--------------+-----------+----------+--------------+-----------+\n",
             "|     review_id|customer_id|product_id|product_parent|review_date|\n",
             "+--------------+-----------+----------+--------------+-----------+\n",
-            "|R1WBPB8MDCCN8F|   48945260|B012P7UPSM|     409940130| 2015-08-31|\n",
-            "|R32M0YEWV77XG8|    5782091|B001GQ3VHG|     657746679| 2015-08-31|\n",
-            "| RR8V7WR27NXJ5|   45813853|B008VS8M58|     962442336| 2015-08-31|\n",
-            "|R1MHO5V9Z932AY|    1593730|B005F06F4U|      74305227| 2015-08-31|\n",
-            "|R16PD71086BD2V|   29605511|B010T4IE2C|     787185588| 2015-08-31|\n",
+            "|R100E6OT70LKOZ|   21498849|B001E29RG6|     221089601| 2011-02-27|\n",
+            "|R100JZDN9RV012|   28299024|B0035HEPXS|     173761747| 2011-10-05|\n",
+            "|R100WJRDBA7IQ5|   40179799|B0019GJZXW|     704428554| 2014-06-18|\n",
+            "|R100ZY64ZJVNVZ|   25717098|B000MMZ5ZG|     247901753| 2015-02-23|\n",
+            "|R101GPEDWLA42J|   42195961|B00U821IME|     647954521| 2015-05-09|\n",
             "+--------------+-----------+----------+--------------+-----------+\n",
             "only showing top 5 rows\n",
             "\n"
@@ -348,15 +346,15 @@
       "source": [
         " # Configuration for RDS instance\n",
         "mode=\"append\"\n",
-        "jdbc_url = \"jdbc:postgresql://mypostgresdb.ceiuqhog03bg.us-east-2.rds.amazonaws.com:5432/sports\"\n",
-        "config = {\"user\":\"root\",\n",
-        "          \"password\": \"postgres\",\n",
+        "jdbc_url = \"jdbc:postgresql://*:5432/sports\"\n",
+        "config = {\"user\":\"*\",\n",
+        "          \"password\": \"*\",\n",
         "          \"driver\":\"org.postgresql.Driver\"}"
       ],
       "metadata": {
         "id": "8iqgy18T7t5O"
       },
-      "execution_count": 26,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -367,30 +365,10 @@
         "review_id_table.write.jdbc(url=jdbc_url, table='review_id_table', mode=mode, properties=config)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 415
-        },
-        "id": "nQN4Wi0e7239",
-        "outputId": "3eb89d4b-bb87-4aba-cac1-183f74490807"
+        "id": "nQN4Wi0e7239"
       },
-      "execution_count": 27,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "PythonException",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mPythonException\u001b[0m                           Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-27-bbbab2ccf97b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Write DataFrame to table\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mreview_id_table\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjdbc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0murl\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mjdbc_url\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtable\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'review_id_table'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mproperties\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/content/spark-3.2.2-bin-hadoop2.7/python/pyspark/sql/readwriter.py\u001b[0m in \u001b[0;36mjdbc\u001b[0;34m(self, url, table, mode, properties)\u001b[0m\n\u001b[1;32m   1036\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mproperties\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1037\u001b[0m             \u001b[0mjprop\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msetProperty\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mproperties\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1038\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_jwrite\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjdbc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0murl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtable\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mjprop\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1039\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1040\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/content/spark-3.2.2-bin-hadoop2.7/python/lib/py4j-0.10.9.5-src.zip/py4j/java_gateway.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m   1320\u001b[0m         \u001b[0manswer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgateway_client\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msend_command\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcommand\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1321\u001b[0m         return_value = get_return_value(\n\u001b[0;32m-> 1322\u001b[0;31m             answer, self.gateway_client, self.target_id, self.name)\n\u001b[0m\u001b[1;32m   1323\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1324\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mtemp_arg\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtemp_args\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/content/spark-3.2.2-bin-hadoop2.7/python/pyspark/sql/utils.py\u001b[0m in \u001b[0;36mdeco\u001b[0;34m(*a, **kw)\u001b[0m\n\u001b[1;32m    115\u001b[0m                 \u001b[0;31m# Hide where the exception came from that shows a non-Pythonic\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    116\u001b[0m                 \u001b[0;31m# JVM exception message.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 117\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mconverted\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    118\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    119\u001b[0m                 \u001b[0;32mraise\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mPythonException\u001b[0m: \n  An exception was thrown from the Python worker. Please see the stack trace below.\nTraceback (most recent call last):\n  File \"<ipython-input-23-d87ec743c3c1>\", line 5, in <lambda>\nTypeError: strptime() argument 1 must be str, not None\n"
-          ]
-        }
-      ]
+      "execution_count": 12,
+      "outputs": []
     }
   ]
 }
