--- a/big_data_level_1_home_improvement.ipynb
+++ b/big_data_level_1_home_improvement.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPszAwK7wC/T1nKOirW5Jwh",
+      "authorship_tag": "ABX9TyMuerUxKMoj6A37tLeJooq+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,42 +28,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "OHVzgNgXQxz5",
-        "outputId": "32658f7d-268f-4823-8308-44416cabe225"
+        "outputId": "009b9f00-c9d2-4dfc-8f59-e8c5fccb53e3"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\r0% [Working]\r            \rGet:1 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran40/ InRelease [3,626 B]\n",
-            "\r0% [Connecting to archive.ubuntu.com] [Connecting to security.ubuntu.com (185.1\r0% [Connecting to archive.ubuntu.com] [Connecting to security.ubuntu.com (185.1\r0% [1 InRelease gpgv 3,626 B] [Connecting to archive.ubuntu.com] [Connecting to\r                                                                               \rGet:2 http://security.ubuntu.com/ubuntu bionic-security InRelease [88.7 kB]\n",
-            "Get:3 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic InRelease [15.9 kB]\n",
-            "Ign:4 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  InRelease\n",
-            "Hit:5 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  InRelease\n",
-            "Hit:6 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  Release\n",
-            "Hit:7 http://archive.ubuntu.com/ubuntu bionic InRelease\n",
-            "Get:8 http://archive.ubuntu.com/ubuntu bionic-updates InRelease [88.7 kB]\n",
-            "Hit:9 http://ppa.launchpad.net/cran/libgit2/ubuntu bionic InRelease\n",
-            "Get:11 http://ppa.launchpad.net/deadsnakes/ppa/ubuntu bionic InRelease [15.9 kB]\n",
-            "Get:12 http://archive.ubuntu.com/ubuntu bionic-backports InRelease [83.3 kB]\n",
-            "Get:13 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic InRelease [21.3 kB]\n",
-            "Get:14 http://security.ubuntu.com/ubuntu bionic-security/universe amd64 Packages [1,551 kB]\n",
-            "Get:15 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic/main Sources [2,164 kB]\n",
-            "Get:16 http://archive.ubuntu.com/ubuntu bionic-updates/universe amd64 Packages [2,329 kB]\n",
+            "\r0% [Working]\r            \rGet:1 http://security.ubuntu.com/ubuntu bionic-security InRelease [88.7 kB]\n",
+            "\r            \rGet:2 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic InRelease [15.9 kB]\n",
+            "\r0% [Connecting to archive.ubuntu.com (185.125.190.39)] [1 InRelease 14.2 kB/88.\r0% [Waiting for headers] [1 InRelease 83.7 kB/88.7 kB 94%] [Connected to cloud.\r                                                                               \rHit:3 http://archive.ubuntu.com/ubuntu bionic InRelease\n",
+            "\r                                                                               \rGet:4 http://archive.ubuntu.com/ubuntu bionic-updates InRelease [88.7 kB]\n",
+            "\r                                                                               \rHit:5 http://ppa.launchpad.net/cran/libgit2/ubuntu bionic InRelease\n",
+            "\r0% [4 InRelease 15.6 kB/88.7 kB 18%] [Connected to cloud.r-project.org (65.9.86\r0% [2 InRelease gpgv 15.9 kB] [4 InRelease 15.6 kB/88.7 kB 18%] [Connected to c\r                                                                               \rGet:6 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran40/ InRelease [3,626 B]\n",
+            "\r0% [2 InRelease gpgv 15.9 kB] [4 InRelease 24.3 kB/88.7 kB 27%] [6 InRelease 3,\r0% [2 InRelease gpgv 15.9 kB] [4 InRelease 24.3 kB/88.7 kB 27%] [Waiting for he\r                                                                               \rGet:7 http://ppa.launchpad.net/deadsnakes/ppa/ubuntu bionic InRelease [15.9 kB]\n",
+            "\r0% [2 InRelease gpgv 15.9 kB] [4 InRelease 69.2 kB/88.7 kB 78%] [Waiting for he\r0% [2 InRelease gpgv 15.9 kB] [Waiting for headers] [Waiting for headers] [7 In\r0% [2 InRelease gpgv 15.9 kB] [Waiting for headers] [Waiting for headers] [Conn\r                                                                               \rGet:8 http://archive.ubuntu.com/ubuntu bionic-backports InRelease [83.3 kB]\n",
+            "Get:9 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic InRelease [21.3 kB]\n",
+            "Ign:10 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  InRelease\n",
+            "Hit:11 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  InRelease\n",
+            "Hit:12 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  Release\n",
+            "Get:13 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic/main Sources [2,164 kB]\n",
+            "Get:14 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic/main amd64 Packages [1,109 kB]\n",
+            "Get:15 http://security.ubuntu.com/ubuntu bionic-security/universe amd64 Packages [1,551 kB]\n",
+            "Get:16 http://security.ubuntu.com/ubuntu bionic-security/restricted amd64 Packages [1,188 kB]\n",
             "Get:17 http://security.ubuntu.com/ubuntu bionic-security/main amd64 Packages [3,020 kB]\n",
-            "Get:18 http://security.ubuntu.com/ubuntu bionic-security/restricted amd64 Packages [1,188 kB]\n",
+            "Get:18 http://archive.ubuntu.com/ubuntu bionic-updates/universe amd64 Packages [2,329 kB]\n",
             "Get:19 http://archive.ubuntu.com/ubuntu bionic-updates/restricted amd64 Packages [1,230 kB]\n",
-            "Get:20 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic/main amd64 Packages [1,109 kB]\n",
-            "Get:21 http://archive.ubuntu.com/ubuntu bionic-updates/main amd64 Packages [3,452 kB]\n",
-            "Get:22 http://ppa.launchpad.net/deadsnakes/ppa/ubuntu bionic/main amd64 Packages [45.3 kB]\n",
-            "Get:23 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic/main amd64 Packages [50.8 kB]\n",
-            "Fetched 16.5 MB in 3s (5,343 kB/s)\n",
+            "Get:20 http://archive.ubuntu.com/ubuntu bionic-updates/main amd64 Packages [3,452 kB]\n",
+            "Get:21 http://ppa.launchpad.net/deadsnakes/ppa/ubuntu bionic/main amd64 Packages [45.3 kB]\n",
+            "Get:22 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic/main amd64 Packages [50.8 kB]\n",
+            "Fetched 16.5 MB in 3s (4,852 kB/s)\n",
             "Reading package lists... Done\n"
           ]
         }
@@ -100,24 +100,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cXTwGNIbRLOC",
-        "outputId": "8ee625b4-0790-4717-b23f-5ca885d92a4d"
+        "outputId": "0b6dadb9-4e21-458b-83fe-042413d5be37"
       },
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2022-10-15 01:31:42--  https://jdbc.postgresql.org/download/postgresql-42.2.9.jar\n",
+            "--2022-10-15 17:44:11--  https://jdbc.postgresql.org/download/postgresql-42.2.9.jar\n",
             "Resolving jdbc.postgresql.org (jdbc.postgresql.org)... 72.32.157.228, 2001:4800:3e1:1::228\n",
             "Connecting to jdbc.postgresql.org (jdbc.postgresql.org)|72.32.157.228|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 914037 (893K) [application/java-archive]\n",
             "Saving to: ‘postgresql-42.2.9.jar’\n",
             "\n",
-            "postgresql-42.2.9.j 100%[===================>] 892.61K  5.01MB/s    in 0.2s    \n",
+            "postgresql-42.2.9.j 100%[===================>] 892.61K  1.76MB/s    in 0.5s    \n",
             "\n",
-            "2022-10-15 01:31:42 (5.01 MB/s) - ‘postgresql-42.2.9.jar’ saved [914037/914037]\n",
+            "2022-10-15 17:44:12 (1.76 MB/s) - ‘postgresql-42.2.9.jar’ saved [914037/914037]\n",
             "\n"
           ]
         }
@@ -132,7 +132,7 @@
       "metadata": {
         "id": "U8hl1t0-RQIe"
       },
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -151,9 +151,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lnjp7PaIRT_r",
-        "outputId": "38240c72-dd9f-49a1-afd4-f212c7dc7ec2"
+        "outputId": "9e269010-4f28-4de5-8a2e-a965fc270315"
       },
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -193,9 +193,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "awCAVnuHRbhK",
-        "outputId": "f4c13492-8a42-453f-89b2-0e65f9f16079"
+        "outputId": "66d35950-68b7-48ec-b3b1-41a6f1239790"
       },
-      "execution_count": 5,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -218,9 +218,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FWBjPb_0Rcxq",
-        "outputId": "facd9aec-d38d-4b00-a448-769b96c94cff"
+        "outputId": "24389bb1-f578-4475-d5a1-c19eb98552b1"
       },
-      "execution_count": 6,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -262,7 +262,7 @@
       "metadata": {
         "id": "rIl8SfUiReLy"
       },
-      "execution_count": 7,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -275,9 +275,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PwIdHwAuRgs4",
-        "outputId": "84086a53-496b-42f5-d879-47d378cf9f42"
+        "outputId": "e11e4a0d-7b60-422c-ad85-860725704b0e"
       },
-      "execution_count": 8,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -315,9 +315,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hKwP4ztARl8B",
-        "outputId": "a93e58da-e84f-41bc-91b0-f6d732f058db"
+        "outputId": "d6f83ba5-80f7-43e0-f902-a45cc9ad3ced"
       },
-      "execution_count": 9,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -428,6 +428,53 @@
         "id": "f56H5OvDVr91"
       },
       "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "customers = df.select(['customer_id']).distinct()\n",
+        "customers.show(5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zzJRwTznvSKH",
+        "outputId": "9b70b20d-ef56-49c2-9901-5a6dafad657d"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-----------+\n",
+            "|customer_id|\n",
+            "+-----------+\n",
+            "|   28377689|\n",
+            "|   28258386|\n",
+            "|    9967574|\n",
+            "|   25153155|\n",
+            "|   10088068|\n",
+            "+-----------+\n",
+            "only showing top 5 rows\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Write DataFrame to table\n",
+        "\n",
+        "customers.write.jdbc(url=jdbc_url, table='customers', mode=mode, properties=config)"
+      ],
+      "metadata": {
+        "id": "1oBP4TNsz-4N"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
